# wafsmith

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
archive/: README.md
cli-app/: experiment.bash  package.json
cli-app/infra/: README.md  docker-compose.yml
cli-app/infra/modsecurity/: modsecurity.conf
cli-app/infra/nginx/: Dockerfile  default.conf.bk  nodejs.conf  proxy_backend.conf
cli-app/infra/rules/: custom.conf
cli-app/infra/web-app/: Dockerfile  index.js  package.json
cli-app/src/commands/: aggregate.js  create.js  evaluate.js  extract.js
cli-app/src/lib/controller/: workflow.js
cli-app/src/lib/llm/: agent.js  agent_worker.js  extract_worker.js
cli-app/src/utils/: constants.js  utility.js  validator.js
data/experiment/business-traffic/: query.txt  usernames.txt
data/experiment/human-vs-lrcf/: payloads.txt
data/logs/extracted-payloads/: sample-extract.txt  sample-from-61-logs-entries.txt
data/test-dataset/business-traffic/: query.txt
data/test-dataset/payload-dataset-10/: payloads-10.txt
data/test-dataset/payload-dataset-100/: payloads-100.txt
data/test-dataset/payload-dataset-20/: payloads-20.txt
data/test-dataset/payload-dataset-200/: payloads-200.txt
data/test-dataset/payload-dataset-40/: payloads-40.txt
tests/: test_evaluate.py  test_evaluate_refactored.py
wafsmith/cmd/: config.py  create.py  evaluate.py  extract.py
wafsmith/lib/: console.py  env.py  llm.py  models.py  payload.py
wafsmith/lib/prompts/: aggregate.py  create.py  extract.py
wafsmith/utils/: constants.py  helper.py
(+53 files in other folders)
